--- a/agent-web/src/app/components/product-details/product-details.component.html
+++ b/agent-web/src/app/components/product-details/product-details.component.html
@@ -6,3 +6,23 @@
 <h5>Name: {{ product?.name }}</h5>
 <h5>Price: {{ product?.price }}</h5>
 <h5>Quantity: {{ product?.quantity }}</h5>
+
+<button class="btn btn-secondary" (click)="toggleShowForm()">Buy product</button>
+
+<div *ngIf="showForm">
+    <form [formGroup]="form" (submit)="submit()">
+        <div class="form-group">
+            <label for="buyerName">Buyer name</label>
+            <input type="text" class="form-control" id="buyerName" placeholder="Enter name" formControlName="buyerName">
+        </div>
+
+        <div class="form-group">
+            <label for="buyerAddress">Buyer address</label>
+            <input type="text" class="form-control" id="buyerAddress" placeholder="Enter address" formControlName="buyerAddress">
+        </div>
+
+        <button type="submit" class="btn btn-primary" [disabled]="form.invalid">
+            Buy
+        </button>
+    </form>
+</div>
