--- a/agent-web/src/app/components/products/products.component.html
+++ b/agent-web/src/app/components/products/products.component.html
@@ -1,6 +1,7 @@
 <h3>All products</h3>
 
 <button class="btn btn-primary" (click)="add()">Add product</button>
+<button class="btn btn-secondary" (click)="reports()">Reports</button>
 
 <table class="table">
     <thead>
